tests/neg/inline-val.scala

inline val a = 1 : Int // error
inline val b: Int = 1 // error
inline val c = b // error
